updated title and tagline with addt'l info

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Seth C. Ellis II
+description: Seth's Blogging Again
+twitter_username: sceII
+github_username: sellis42010
 theme: jekyll-theme-minimal
